fix: split up fixed-height and truncate from btn cell

--- a/src/less/mixins/private/button-mixins.less
+++ b/src/less/mixins/private/button-mixins.less
@@ -70,11 +70,15 @@
     align-items: center;
     display: flex;
     width: 100%;
+}
 
+.btn-cell-fixed-height() {
     &--fixed-height {
         .btn-fixed-height();
     }
+}
 
+.btn-cell-truncated() {
     &--truncated {
         .btn-fixed-height();
     }
